<resources>
    <string name="app_name">historyjki</string>
    <string name="somethingGoesWrongErrorMsg">Something goes wrong</string>
    <string name="dislike">DISLIKE</string>
    <string name="like">LIKE</string>
    <string name="addButton">Button</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="stories">Stories</string>
    <string name="myStories">My stories</string>
    <string name="storyContent">Story content</string>
    <string name="firstContinuation">First continuation</string>
    <string name="secondContinuation">Second continuation</string>
    <string name="thirdContinuation">Third continuation</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="createStory">Create story</string>
    <string name="TAG_TYPE.SCIENCE_FICTION">Science fiction</string>
    <string name="TAG_TYPE.MYSTERY">Mystery</string>
    <string name="TAG_TYPE.FANTASY">Fantasy</string>
    <string name="TAG_TYPE.DRAMA">Drama</string>
    <string name="TAG_TYPE.MYTHOLOGY">Mythology</string>
    <string name="TAG_TYPE.ROMANCE">Romance</string>
    <string name="TAG_TYPE.ADVENTURE">Adventure</string>
    <string name="TAG_TYPE.HORROR">Horror</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
</resources>
