<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.pm.historyjki.StoryActivity">

    <EditText
            android:id="@+id/et_story"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:inputType="text"
            android:hint="@string/storyContent"
            android:background="@drawable/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent" android:gravity="start" />

    <EditText
            android:id="@+id/et_continuation_1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="text"
            android:hint="@string/firstContinuation"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/et_story"
            android:gravity="start"
    />

    <EditText
            android:id="@+id/et_continuation_2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="text"
            android:hint="@string/secondContinuation"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/et_continuation_1"
            android:gravity="start"/>

    <EditText
            android:id="@+id/et_continuation_3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="text"
            android:hint="@string/thirdContinuation"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/et_continuation_2"
            android:gravity="start"/>

    <Button
            android:id="@+id/btn_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dislikebutton"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/dislike"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_continuation_3"/>

    <Button
            android:id="@+id/btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/likebutton"
            android:textColor="@android:color/holo_green_light"
            android:text="@string/like"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_continuation_3"/>
    <Button
            android:text="@string/save"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_new_story"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>