<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".StoryContinuationFragment">


    <TextView
            android:hint="@string/continuationStarter"
            android:layout_width="0dp"
            android:layout_height="50dp" android:id="@+id/tv_continuation_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:inputType="text"
            android:hint="@string/storyContent"
            android:ems="10"
            android:gravity="start"
            android:id="@+id/et_continuation_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_continuation_title" android:layout_marginTop="24dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/firstContinuation"
            android:ems="10"
            android:id="@+id/et_continuation_first_continuation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_open_first_continuation" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_continuation_content" android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/secondContinuation"
            android:ems="10"
            android:id="@+id/et_continuation_second_continuation" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_continuation_first_continuation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_open_second_continuation" android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/thirdContinuation"
            android:ems="10"
            android:id="@+id/et_continuation_third_continuation" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_continuation_second_continuation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_open_third_continuation" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_continuation" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/common_button"/>
    <ImageButton
            android:src="@drawable/baseline_chevron_right_black_36"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn_open_first_continuation"
            style="@android:style/Widget.Holo.Light.ImageButton" android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="@+id/et_continuation_first_continuation"
            app:layout_constraintBottom_toBottomOf="@+id/et_continuation_first_continuation"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
            android:src="@drawable/baseline_chevron_right_black_36"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn_open_second_continuation"
            style="@android:style/Widget.Holo.Light.ImageButton" android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="@+id/et_continuation_second_continuation"
            app:layout_constraintBottom_toBottomOf="@+id/et_continuation_second_continuation"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
            android:src="@drawable/baseline_chevron_right_black_36"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn_open_third_continuation"
            style="@android:style/Widget.Holo.Light.ImageButton" android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="@+id/et_continuation_third_continuation"
            app:layout_constraintBottom_toBottomOf="@+id/et_continuation_third_continuation"
            app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>