<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StoryCreatorActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/title"
            android:ems="10"
            android:id="@+id/et_story_creator_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/author"
            android:ems="10"
            android:id="@+id/et_story_creator_author" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/et_story_creator_title"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/createStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_create_story" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Colored" android:elevation="0dp"
            android:background="@drawable/common_button"/>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_story_creator_author"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_create_story" android:id="@+id/table_tags">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <CheckBox
                    android:text="CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="135dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/btn_story_creator_tag_example"
                    android:layout_weight="0.5"/>
            <CheckBox
                    android:text="CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="0.5"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <CheckBox
                    android:text="CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="135dp"
                    tools:layout_editor_absoluteX="16dp" android:layout_weight="0.5"/>
            <CheckBox
                    android:text="CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="0.5"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <CheckBox
                    android:text="CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="135dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/checkBox" android:layout_weight="0.5"/>
            <CheckBox
                    android:text="CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="0.5"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>